just changed some changes nothing to bother future me!

--- a/HOTEL/hotel.css
+++ b/HOTEL/hotel.css
@@ -102,7 +102,7 @@ section .container h1 span{
     
 }
 section .pics {
-    /* width: 630px; */
+    width: 630px;
     position: relative;
     filter: drop-shadow( 10px 0  20px black);
     /* padding-top: 100px; */
